fix icon spacing

--- a/app/bundles/CoreBundle/Assets/css/libraries/builder.css
+++ b/app/bundles/CoreBundle/Assets/css/libraries/builder.css
@@ -2927,6 +2927,9 @@ html body .fr-gatedvideo-overlay {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+a > .fa {
+  padding-right: 4px;
+}
 /* makes the font 33% larger relative to the icon container */
 .fa-lg {
   font-size: 1.33333333em;
@@ -5524,6 +5527,7 @@ div[data-slot].ui-sortable-helper {
 }
 .chosen-container .chosen-results li:before {
   font: normal normal normal 14px/1 FontAwesome;
+  padding-right: 6px;
 }
 div:empty[data-slot],
 div.empty[data-slot] {
